<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <item type="id" name="itemTitle" />
    <item type="id" name="itemIcon" />
    <item type="id" name="itemSubTitle" />
    <item type="id" name="container" />
    <item type="id" name="artifact_fragment_list" />
    <item type="id" name="artifact_recycler_view" />
    <item type="id" name="account_recycler_view" />
    <item type="id" name="build_recycler_view" />
    <item type="id" name="overview_recycler_view" />
    <item type="id" name="properties_recycler_view" />
    <item type="id" name="snapshot_recycler_view" />
    <item type="id" name="build_queue_recycler_view" />
    <item type="id" name="running_builds_recycler_view" />
    <item type="id" name="running_empty_title_view" />
    <item type="id" name="queued_empty_title_view" />
    <item type="id" name="toolbar" />
</resources>
