...
    <string name="empty_list_message_artifacts">No artifacts</string>
    <string name="empty_list_message_builds">No builds</string>
    <string name="empty_list_message_running_builds">No running builds</string>
    <string name="empty_list_message_favorite_running_builds">No favorite running builds</string>
    <string name="empty_list_message_build_queue">Builds queue is empty</string>
    <string name="empty_list_message_favorite_build_queue">Favorite builds queue is empty</string>
    <string name="empty_list_message_projects_or_build_types">No projects or build configurations</string>
    <string name="empty_list_message_favorites">No favorite configurations added</string>

    <!--Build elements-->
    <string name="unknown_trigger_type_text">Unknown trigger type!</string>
    <string name="triggered_deleted_user_text">Deleted user</string>
    <string name="triggered_deleted_configuration_text">Deleted configuration</string>
...
    <string name="build_triggered_by_section_text">Triggered by</string>
    <string name="build_restarted_by_section_text">Restarted by</string>
    <string name="build_canceled_by_text">Canceled by</string>
    <string name="build_cancellation_time_text">Cancellation time</string>
    <string name="build_personal_text">Personal of</string>
    <string name="build_type_by_section_text">Configuration</string>
    <string name="build_project_by_section_text">Project</string>

    <!--Artifact-->
    <!--bottom sheet menu-->
    <!--permissions dialog-->
    <string name="permissions_dialog_title">Permissions warning</string>
    <string name="permissions_dialog_content">In order to download artifact the app requires to have WRITE_EXTERNAL_STORAGE permissions granted.</string>
...
