<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="stateHolder"
            type="teamcityapp.libraries.utils.EmptyState" />
    </data>

    <LinearLayout
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="@{stateHolder.emptyVisibility}">

        <ImageView
            android:layout_width="@dimen/dp_124"
            android:layout_height="@dimen/dp_124"
            app:srcCompat="@drawable/ic_format_list_bulleted_black_24dp"
            app:tint="@color/material_on_background_emphasis_medium" />

        <TextView
            android:id="@+id/empty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:text="@{stateHolder.emptyText}"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/material_on_background_emphasis_medium"
            tools:text="Empty" />

    </LinearLayout>

</layout>